// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`center.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="1"
      />
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`default.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="1"
      />
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`format.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
    style="width: 150px;"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="0%"
      />
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`left.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-is-controls-right t-input-number--column"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-down"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="5"
      />
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-chevron-up"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`normal.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--normal"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="10"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <div
        class="t-input-number t-size-s t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input"
        >
          <input
            class="t-input__inner"
            value="3"
          />
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-m t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input"
        >
          <input
            class="t-input__inner"
            value="6"
          />
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-l t-input-number--row"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-remove"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.5 7.35h9v1.3h-9v-1.3z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input"
        >
          <input
            class="t-input__inner"
            value="9"
          />
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="tdesign-demo-block-row"
    >
      <div
        class="t-input-number t-size-m t-is-controls-right t-input-number--column"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input"
        >
          <input
            class="t-input__inner"
            value="5"
          />
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
      <div
        class="t-input-number t-size-l t-is-controls-right t-input-number--column"
      >
        <button
          class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-down"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M3.54 6.46l.92-.92L8 9.08l3.54-3.54.92.92L8 10.92 3.54 6.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
        <div
          class="t-input"
        >
          <input
            class="t-input__inner"
            value="10"
          />
        </div>
        <button
          class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
          style="position: relative;"
          type="button"
        >
          <svg
            class="t-icon t-icon-chevron-up"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M12.46 9.54l-.92.92L8 6.92l-3.54 3.54-.92-.92L8 5.08l4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`step.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-number t-size-m t-input-number--row"
  >
    <button
      class="t-input-number__decrease t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-remove"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M3.5 7.35h9v1.3h-9v-1.3z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        value="3.2"
      />
    </div>
    <button
      class="t-input-number__increase t-button t-button--theme-default t-button--variant-outline t-button--shape-square"
      style="position: relative;"
      type="button"
    >
      <svg
        class="t-icon t-icon-add"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
